force-app/main/default/objects/Evento_medico__c/Evento_medico__c.object-meta.xml
<CustomObject>
    <label>Evento Médico</label>
    <nameField>
        <displayFormat>EM-{00000}</displayFormat>
        <label>Nombre de Evento medico</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eventos Medicos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>