force-app/main/default/objects/Evento_medico__c/fields/Agencia__c.field-meta.xml
<CustomField>
    <fullName>Agencia__c</fullName>
    <label>Agencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>