force-app/main/default/objects/Evento_medico__c/fields/Alertas_AM_pendientes__c.field-meta.xml
<CustomField>
    <fullName>Alertas_AM_pendientes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alertas AM pendientes</label>
    <type>Checkbox</type>
</CustomField>