force-app/main/default/objects/Evento_medico__c/fields/Ap_Anestesia__c.field-meta.xml
<CustomField>
    <fullName>Ap_Anestesia__c</fullName>
    <label>Ap Anestesia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>