force-app/main/default/objects/Evento_medico__c/fields/AP_material__c.field-meta.xml
<CustomField>
    <fullName>AP_material__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AP material</label>
    <type>Checkbox</type>
</CustomField>