force-app/main/default/objects/Evento_medico__c/fields/AP_presupuesto__c.field-meta.xml
<CustomField>
    <fullName>AP_presupuesto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AP presupuesto</label>
    <type>Checkbox</type>
</CustomField>