force-app/main/default/objects/Evento_medico__c/fields/Ape_y_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Ape_y_Nombre__c</fullName>
    <formula>Asociado__r.LastName &amp; &quot; &quot; &amp; Asociado__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ape y Nombre</label>
    <type>Text</type>
</CustomField>