force-app/main/default/objects/Evento_medico__c/fields/Asociado__c.field-meta.xml
<CustomField>
    <fullName>Asociado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asociado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cuenta personal</value>
        </filterItems>
        <filterItems>
            <field>Account.Codigo_de_Afiliado__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Eventos Medicos (Asociado)</relationshipLabel>
    <relationshipName>Eventos_Medicos2</relationshipName>
    <type>Lookup</type>
</CustomField>