force-app/main/default/objects/Evento_medico__c/fields/Codigo_Afiliado__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Afiliado__c</fullName>
    <formula>Asociado__r.Codigo_de_Afiliado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo Afiliado</label>
    <type>Text</type>
</CustomField>