force-app/main/default/objects/Evento_medico__c/fields/Codigo_de_Afiliado__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Afiliado__c</fullName>
    <label>Código de Afiliado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>