force-app/main/default/objects/Evento_medico__c/fields/Codigo_Nomenclador1__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Nomenclador1__c</fullName>
    <formula>Codigo_Nomenclador__r.Codigo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo Nomenclador</label>
    <type>Text</type>
</CustomField>