force-app/main/default/objects/Evento_medico__c/fields/Codigo_Nomenclador__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Nomenclador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nomenclador</label>
    <referenceTo>Nomenclador_de_Prestacion__c</referenceTo>
    <relationshipLabel>Eventos Medicos (Código Nomenclador)</relationshipLabel>
    <relationshipName>Eventos_Medicos1</relationshipName>
    <type>Lookup</type>
</CustomField>