force-app/main/default/objects/Evento_medico__c/fields/Consultorio__c.field-meta.xml
<CustomField>
    <fullName>Consultorio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultorio</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Consultorio__c.Efector_Prestador__c</field>
            <operation>equals</operation>
            <valueField>$Source.Prestador__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Consultorio__c</referenceTo>
    <relationshipLabel>Eventos Medicos</relationshipLabel>
    <relationshipName>Eventos_Medicos</relationshipName>
    <type>Lookup</type>
</CustomField>