force-app/main/default/objects/Evento_medico__c/fields/Delegacion__c.field-meta.xml
<CustomField>
    <fullName>Delegacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegación</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Eventos Medicos</relationshipLabel>
    <relationshipName>Eventos_Medicos3</relationshipName>
    <type>Lookup</type>
</CustomField>