force-app/main/default/objects/Evento_medico__c/fields/Descripcion_Consultorio__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Consultorio__c</fullName>
    <label>Descripción Consultorio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>