force-app/main/default/objects/Evento_medico__c/fields/descripcion_diagnostico__c.field-meta.xml
<CustomField>
    <fullName>descripcion_diagnostico__c</fullName>
    <formula>Diagnostico__r.Descripci_n_Diagnostico__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción diagnostico</label>
    <type>Text</type>
</CustomField>