force-app/main/default/objects/Evento_medico__c/fields/Descripcion_Evento_Medico_de_seguimiento__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Evento_Medico_de_seguimiento__c</fullName>
    <formula>EMS__r.Descripcion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción Evento Medico de seguimiento</label>
    <type>Text</type>
</CustomField>