force-app/main/default/objects/Evento_medico__c/fields/Descripcion_motivo__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_motivo__c</fullName>
    <label>Descripción motivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>