force-app/main/default/objects/Evento_medico__c/fields/DescripciOn_Tipo_EMS__c.field-meta.xml
<CustomField>
    <fullName>DescripciOn_Tipo_EMS__c</fullName>
    <label>Descripción Tipo EM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>