force-app/main/default/objects/Evento_medico__c/fields/Diagnostico__c.field-meta.xml
<CustomField>
    <fullName>Diagnostico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diagnóstico</label>
    <referenceTo>Diagnostico__c</referenceTo>
    <relationshipLabel>Eventos Medicos</relationshipLabel>
    <relationshipName>Eventos_Medicos</relationshipName>
    <type>Lookup</type>
</CustomField>