force-app/main/default/objects/Evento_medico__c/fields/Dias_de_internacion__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_internacion__c</fullName>
    <formula>IF((Fecha_y_hora_fin_ems__c - Fecha_y_Hora_inicio_EMS__c) = 0, 1, (Fecha_y_hora_fin_ems__c - Fecha_y_Hora_inicio_EMS__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias de internacion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>