force-app/main/default/objects/Evento_medico__c/fields/Domicilio__c.field-meta.xml
<CustomField>
    <fullName>Domicilio__c</fullName>
    <label>Domicilio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>