force-app/main/default/objects/Evento_medico__c/fields/Domicilio_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Domicilio_Entrega__c</fullName>
    <label>Domicilio Entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Afiliado</fullName>
            </value>
            <value>
                <fullName>Agencia</fullName>
            </value>
            <value>
                <fullName>Empresa</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>