force-app/main/default/objects/Evento_medico__c/fields/Efector_Solicitante__c.field-meta.xml
<CustomField>
    <fullName>Efector_Solicitante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Efector Solicitante</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Efector</value>
        </filterItems>
        <filterItems>
            <field>Account.Es_Profesional__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.Estado__c</field>
            <operation>equals</operation>
            <value>Activo</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Eventos Medicos (Efector Solicitante)</relationshipLabel>
    <relationshipName>Eventos_Medicos1</relationshipName>
    <type>Lookup</type>
</CustomField>