force-app/main/default/objects/Evento_medico__c/fields/Emitido__c.field-meta.xml
<CustomField>
    <fullName>Emitido__c</fullName>
    <label>Emitido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>