force-app/main/default/objects/Evento_medico__c/fields/EMS__c.field-meta.xml
<CustomField>
    <fullName>EMS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EMS</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Evento_medico__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Evento médico de seguimiento</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Evento_medico__c</referenceTo>
    <relationshipLabel>Eventos Medicos</relationshipLabel>
    <relationshipName>Eventos_Medicos</relationshipName>
    <type>Lookup</type>
</CustomField>