force-app/main/default/objects/Evento_medico__c/fields/Estado_Evento_Medico_de_seguimiento__c.field-meta.xml
<CustomField>
    <fullName>Estado_Evento_Medico_de_seguimiento__c</fullName>
    <formula>TEXT(EMS__r.Estado__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado Evento Medico de seguimiento</label>
    <type>Text</type>
</CustomField>