force-app/main/default/objects/Evento_medico__c/fields/EventoMedicoID18__c.field-meta.xml
<CustomField>
    <fullName>EventoMedicoID18__c</fullName>
    <description>Campo para visualizar el ID de 18 Dígitos en los Reportes - JIRA DES- 567</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EventoMedicoID18</label>
    <type>Text</type>
</CustomField>