force-app/main/default/objects/Evento_medico__c/fields/Existente_en_SS__c.field-meta.xml
<CustomField>
    <fullName>Existente_en_SS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existente en SS</label>
    <type>Checkbox</type>
</CustomField>