force-app/main/default/objects/Evento_medico__c/fields/Fecha_activacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_activacion__c</fullName>
    <description>Campo se utiliza para regla de validación para impedir crear un caso con fecha posterior a la fecha fin de Evento Medico</description>
    <formula>Fecha_y_hora_fin_ems__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha activacion</label>
    <type>Date</type>
</CustomField>