force-app/main/default/objects/Evento_medico__c/fields/Fecha_de_Vencimiento_Certificado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Vencimiento_Certificado__c</fullName>
    <label>Fecha de Vencimiento Certificado</label>
    <type>Date</type>
</CustomField>