force-app/main/default/objects/Evento_medico__c/fields/Fecha_suspendido__c.field-meta.xml
<CustomField>
    <fullName>Fecha_suspendido__c</fullName>
    <description>En esta campo se almacena la fecha y hora en el que el evento medico cambio suspendido</description>
    <label>Fecha suspendido</label>
    <type>DateTime</type>
</CustomField>