force-app/main/default/objects/Evento_medico__c/fields/Fecha_y_hora_fin_ems__c.field-meta.xml
<CustomField>
    <fullName>Fecha_y_hora_fin_ems__c</fullName>
    <label>Fecha y hora fin EM</label>
    <type>DateTime</type>
</CustomField>