force-app/main/default/objects/Evento_medico__c/fields/Fecha_y_Hora_inicio_EMS__c.field-meta.xml
<CustomField>
    <fullName>Fecha_y_Hora_inicio_EMS__c</fullName>
    <label>Fecha y Hora inicio EM</label>
    <type>DateTime</type>
</CustomField>