force-app/main/default/objects/Evento_medico__c/fields/Forma_de_egreso__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_egreso__c</fullName>
    <label>Forma de egreso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALTA_INTERN_DOM</fullName>
                <label>ALTA CONTINUA INTERNACION DOMICILIARIA</label>
            </value>
            <value>
                <fullName>ALTA_MEDICA</fullName>
                <label>ALTA MEDICA</label>
            </value>
            <value>
                <fullName>ALTA_VOL</fullName>
                <label>ALTA VOLUNTARIA</label>
            </value>
            <value>
                <fullName>COMPRA_EQUIPO</fullName>
                <label>COMPRA EQUIPO</label>
            </value>
            <value>
                <fullName>CIERRE</fullName>
                <label>DUPLICIDAD EVENTO/EVENTO VENCIDO</label>
            </value>
            <value>
                <fullName>EMBARAZO</fullName>
            </value>
            <value>
                <fullName>ALTA_FUERA_VIG</fullName>
                <label>EVENTO DE ALTA POR FUERA DE VIGENCIA</label>
            </value>
            <value>
                <fullName>FALLECIMIENTO</fullName>
                <label>FALLECIMIENTO DEL PACIENTE</label>
            </value>
            <value>
                <fullName>FUGA</fullName>
            </value>
            <value>
                <fullName>RECH</fullName>
                <label>RECHAZO</label>
            </value>
            <value>
                <fullName>BAJA</fullName>
                <label>SOCIO BAJA</label>
            </value>
            <value>
                <fullName>EDAD_LIMITE</fullName>
                <label>SUPERA EL LIMITE DE EDAD</label>
            </value>
            <value>
                <fullName>TRASLADO</fullName>
                <label>TRASLADO A CENTRO DE MAYOR COMPLEJIDAD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>