force-app/main/default/objects/Evento_medico__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>