force-app/main/default/objects/Evento_medico__c/fields/Motivo_de_suspension__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_suspension__c</fullName>
    <label>Motivo de suspensión</label>
    <length>255</length>
    <type>Text</type>
</CustomField>