force-app/main/default/objects/Evento_medico__c/fields/Nombre_Consultorio__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Consultorio__c</fullName>
    <label>Nombre Consultorio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>