force-app/main/default/objects/Evento_medico__c/fields/Nombre_delegacion__c.field-meta.xml
<CustomField>
    <fullName>Nombre_delegacion__c</fullName>
    <formula>Delegacion__r.Nombre_delegacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre delegacion</label>
    <type>Text</type>
</CustomField>