force-app/main/default/objects/Evento_medico__c/fields/Nombre_efector__c.field-meta.xml
<CustomField>
    <fullName>Nombre_efector__c</fullName>
    <label>Nombre efector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>