force-app/main/default/objects/Evento_medico__c/fields/Nombre_Prestador__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Prestador__c</fullName>
    <label>Nombre Prestador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>