force-app/main/default/objects/Evento_medico__c/fields/Nombre_responsable__c.field-meta.xml
<CustomField>
    <fullName>Nombre_responsable__c</fullName>
    <label>Nombre Responsable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>