force-app/main/default/objects/Evento_medico__c/fields/Nro_de_Evento_Medico_SS__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_Evento_Medico_SS__c</fullName>
    <externalId>true</externalId>
    <label>Nro. de Evento Médico SS</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>