force-app/main/default/objects/Evento_medico__c/fields/Otro_domicilio__c.field-meta.xml
<CustomField>
    <fullName>Otro_domicilio__c</fullName>
    <label>Otro domicilio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>