force-app/main/default/objects/Evento_medico__c/fields/Prestacion__c.field-meta.xml
<CustomField>
    <fullName>Prestacion__c</fullName>
    <formula>Codigo_Nomenclador__r.Prestacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prestación</label>
    <type>Text</type>
</CustomField>