force-app/main/default/objects/Evento_medico__c/fields/Recupero__c.field-meta.xml
<CustomField>
    <fullName>Recupero__c</fullName>
    <label>Recupero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>