force-app/main/default/objects/Evento_medico__c/fields/Regla_aplicada__c.field-meta.xml
<CustomField>
    <fullName>Regla_aplicada__c</fullName>
    <label>Regla aplicada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>