force-app/main/default/objects/Evento_medico__c/fields/Responsable__c.field-meta.xml
<CustomField>
    <fullName>Responsable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Efector</value>
        </filterItems>
        <filterItems>
            <field>Account.Es_Profesional__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Eventos Medicos (Responsable)</relationshipLabel>
    <relationshipName>Eventos_Medicos_Internacion</relationshipName>
    <type>Lookup</type>
</CustomField>