force-app/main/default/objects/Evento_medico__c/fields/Resultado__c.field-meta.xml
<CustomField>
    <fullName>Resultado__c</fullName>
    <label>Resultado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desestimado</fullName>
            </value>
            <value>
                <fullName>En Estudio</fullName>
            </value>
            <value>
                <fullName>Negativo</fullName>
            </value>
            <value>
                <fullName>Positivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>