force-app/main/default/objects/Evento_medico__c/fields/Sin_complicaciones__c.field-meta.xml
<CustomField>
    <fullName>Sin_complicaciones__c</fullName>
    <label>Sin complicaciones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Sin complicaciones</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Con complicaciones</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>