force-app/main/default/objects/Evento_medico__c/fields/Subtipo__c.field-meta.xml
<CustomField>
    <fullName>Subtipo__c</fullName>
    <label>Subtipo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oxi Cronico</fullName>
            </value>
            <value>
                <fullName>Oxi Terapia</fullName>
            </value>
            <value>
                <fullName>Idom</fullName>
            </value>
            <value>
                <fullName>Clinico</fullName>
                <label>Clínico</label>
            </value>
            <value>
                <fullName>Psiquiatrico</fullName>
                <label>Psiquiátrico</label>
            </value>
            <value>
                <fullName>Rehabilitacion</fullName>
                <label>Rehabilitación</label>
            </value>
            <value>
                <fullName>Quirurgico</fullName>
                <default>true</default>
                <label>Quirurgico</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>