force-app/main/default/objects/Evento_medico__c/fields/Suspendido__c.field-meta.xml
<CustomField>
    <fullName>Suspendido__c</fullName>
    <label>Suspendido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>