force-app/main/default/objects/Evento_medico__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alto costo</fullName>
            </value>
            <value>
                <fullName>Celiaco</fullName>
            </value>
            <value>
                <fullName>Clinico</fullName>
            </value>
            <value>
                <fullName>Covid</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Discapacidad</fullName>
            </value>
            <value>
                <fullName>Esclero</fullName>
            </value>
            <value>
                <fullName>Fertilidad</fullName>
            </value>
            <value>
                <fullName>Hepatitis</fullName>
            </value>
            <value>
                <fullName>HIV</fullName>
            </value>
            <value>
                <fullName>Leches</fullName>
            </value>
            <value>
                <fullName>Oxigenoterapia</fullName>
            </value>
            <value>
                <fullName>Programa Cronicos</fullName>
            </value>
            <value>
                <fullName>Provision Anticonceptivos</fullName>
            </value>
            <value>
                <fullName>Provision Oncologicos</fullName>
            </value>
            <value>
                <fullName>Quirurgico</fullName>
            </value>
            <value>
                <fullName>Transplante</fullName>
            </value>
            <value>
                <fullName>Vacunas</fullName>
            </value>
            <value>
                <fullName>Anticonceptivos</fullName>
                <isActive>false</isActive>
                <label>Anticonceptivos</label>
            </value>
            <value>
                <fullName>EMS Discapacidad</fullName>
                <isActive>false</isActive>
                <label>EMS Discapacidad</label>
            </value>
            <value>
                <fullName>EMS Fertilidad</fullName>
                <isActive>false</isActive>
                <label>EMS Fertilidad</label>
            </value>
            <value>
                <fullName>EMS Oxigenoterapia</fullName>
                <isActive>false</isActive>
                <label>EMS Oxigenoterapia</label>
            </value>
            <value>
                <fullName>EMS Trasplante</fullName>
                <isActive>false</isActive>
                <label>EMS Trasplante</label>
            </value>
            <value>
                <fullName>Internacion</fullName>
                <isActive>false</isActive>
                <label>Internacion</label>
            </value>
            <value>
                <fullName>Internacion Domiciliaria</fullName>
                <isActive>false</isActive>
                <label>Internacion Domiciliaria</label>
            </value>
            <value>
                <fullName>Provision de Oncologicos</fullName>
                <isActive>false</isActive>
                <label>Provision de Oncologicos</label>
            </value>
            <value>
                <fullName>Rehabilitacion</fullName>
                <isActive>false</isActive>
                <label>Rehabilitacion</label>
            </value>
            <value>
                <fullName>Trastornos Alimentarios</fullName>
                <isActive>false</isActive>
                <label>Trastornos Alimentarios</label>
            </value>
            <value>
                <fullName>Tratamiento Adicciones</fullName>
                <isActive>false</isActive>
                <label>Tratamiento Adicciones</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>