force-app/main/default/objects/Evento_medico__c/fields/Tipo_de_Evento_Medico_de_seguimiento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Evento_Medico_de_seguimiento__c</fullName>
    <formula>TEXT(EMS__r.Tipo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Evento Medico de seguimiento</label>
    <type>Text</type>
</CustomField>