force-app/main/default/objects/Evento_medico__c/fields/Via_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Via_Entrega__c</fullName>
    <label>Vía Entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DROGUERIA</fullName>
                <label>Droguería</label>
            </value>
            <value>
                <fullName>AGENCIA</fullName>
                <label>Agencia</label>
            </value>
            <value>
                <fullName>OTROS</fullName>
                <label>Otros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>