force-app/main/default/objects/Evento_medico__c/recordTypes/Evento_medico_de_internacion.recordType-meta.xml
<RecordType>
    <fullName>Evento_medico_de_internacion</fullName>
    <active>true</active>
    <label>Evento médico de internación</label>
</RecordType>