force-app/main/default/objects/Evento_medico__c/recordTypes/Evento_medico_de_seguimiento.recordType-meta.xml
<RecordType>
    <fullName>Evento_medico_de_seguimiento</fullName>
    <active>true</active>
    <label>Evento médico de seguimiento</label>
</RecordType>