force-app/main/default/objects/Evento_medico__c/validationRules/Bloquear_resgistro.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloquear_resgistro</fullName>
    <active>false</active>
    <description>Validación para bloquear registro si el estado es cerrado o suspendido, solo un perfil con administrador de sistema puede modificar</description>
    <errorConditionFormula>AND(
				$Profile.Name  &lt;&gt; &quot;Administrador del sistema&quot;,
				OR(
	      ISPICKVAL(PRIORVALUE(Estado__c),&quot;Cerrado&quot;),
							ISPICKVAL(PRIORVALUE(Suspendido__c),&quot;Si&quot;)
								),
								NOT(ISNEW()
												)
					)</errorConditionFormula>
    <errorDisplayField>Agencia__c</errorDisplayField>
    <errorMessage>No tiene el perfil necesario para modificar este registro</errorMessage>
</ValidationRule>