force-app/main/default/objects/Evento_medico__c/validationRules/Modificacion_asociado.validationRule-meta.xml
<ValidationRule>
    <fullName>Modificacion_asociado</fullName>
    <active>true</active>
    <description>Validacion para que solo los usuarios con perfil de Administrador del sistema pueda modificar el campos &quot;Asociado&quot;</description>
    <errorConditionFormula>AND(
				 $Profile.Name  &lt;&gt; &quot;Administrador del sistema&quot;,
				ISCHANGED(Asociado__c)
				)</errorConditionFormula>
    <errorMessage>Solo usuarios con Perfil &quot;Administrador del sistema&quot; pueden modificar este campo</errorMessage>
</ValidationRule>