force-app/main/default/objects/Evento_medico__c/validationRules/Modificar_resultado_solo_en_tipo_covid.validationRule-meta.xml
<ValidationRule>
    <fullName>Modificar_resultado_solo_en_tipo_covid</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(Tipo__c, &apos;COVID&apos;)),
				NOT(ISPICKVAL(Resultado__c, &apos;&apos;))
)</errorConditionFormula>
    <errorDisplayField>Resultado__c</errorDisplayField>
    <errorMessage>Sólo debe completarse en los eventos de tipo COVID</errorMessage>
</ValidationRule>