force-app/main/default/objects/Evento_medico__c/validationRules/Modificar_Subtipo_en_Tipo_Oxigenoterapia.validationRule-meta.xml
<ValidationRule>
    <fullName>Modificar_Subtipo_en_Tipo_Oxigenoterapia</fullName>
    <active>true</active>
    <description>Permitir modificar subtipo cuando el perfil es Back O Compras Tecnicas</description>
    <errorConditionFormula>AND(
    $Profile.Name &lt;&gt; &apos;Back&apos;,
				$Profile.Name &lt;&gt; &apos;Back Administrativo&apos;,
				$Profile.Name &lt;&gt; &apos;Back CT&apos;,
				$Profile.Name &lt;&gt; &apos;Administrador del sistema&apos;,
				$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
				ISCHANGED(Subtipo__c) 
)</errorConditionFormula>
    <errorMessage>El Subtipo de un Evento Medico de Oxigenoterapia debe ser modificado por un Back o un Administrador</errorMessage>
</ValidationRule>