force-app/main/default/objects/Evento_medico__c/validationRules/Motivo_suspension.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_suspension</fullName>
    <active>true</active>
    <description>Validacion para ser obligatorio llenar motivo de suspension antes de cambiar el estado a suspendido</description>
    <errorConditionFormula>AND(
				ISCHANGED(Suspendido__c),
				ISPICKVAL(Suspendido__c,&quot;Si&quot;), 
		  ISBLANK(Motivo_de_suspension__c)
								)</errorConditionFormula>
    <errorMessage>Debe completar el campo &quot;Motivo de suspensión&quot;</errorMessage>
</ValidationRule>